changed colors, logo, footer and form

--- a/dogs/dogs.html
+++ b/dogs/dogs.html
@@ -11,18 +11,19 @@
 
 <div class="container">
 	<div class="logo">
-		<img src="../img/dogs.png" class="logo-image"></img>
+		<img src="../img/logo/dog-logo.png" alt="Dog logo" class="logo-image"></img>
+		<h1 class="logo-header">Hunddagiset<br>Glada Tassar</h1>
 	</div>
-	
+
 	<nav class="navbar">
 		<a href="../home/home.html">Hem</a>
 		<a href="../service/service.html">Priser</a>
 		<a href="../contact/contact.html">Kontakt</a>
 		<a href="dogs.html">Våra Hundar</a>
-		<span class="contactInfo">contact@gladatassar.com - 08-4593032</span>
+		<span class="contact-info">contact@gladatassar.com - 08-4593032</span>
 	</nav>
 
-	<section class="rollingImages">
+	<section class="rolling-images">
 		<img src="../img/dogs/max.jpg" class="max"></img>
 	</section>
 
@@ -30,39 +31,68 @@
 		<h1>VÅRA HUNDAR!</h1>
 	</section>
 
-	<section class="textOne">
+	<section class="text-one">
 		<h2>MAX</h2>
 		<p>Våran energiknippe som alltid är på strålande humör och fick han välja så skulle vi busa hela tiden!<br>
 		Älskar att springa runt och leka med dom andra hundarna.</p>
 	</section>
-	<section class="image">
-		<img src="../img/dogs/maxOne.jpg" class="main-image-one"></img>
+
+	<section class="image-one">
+		<img src="../img/allDogs/max.jpg" alt="Bild på Max" class="main-image-one"></img>
 	</section>
 
-
-	<section class="imageTwo">
-		<img src="../img/dogs/maxTwo.jpg" class="main-image-two"></img>
+	<section class="image-two">
+		<img src="../img/allDogs/bonzo.jpg" alt="Bild på Bonzo" class="main-image-two"></img>
 	</section>
 
-	<section class="textTwo">
-		<h2>MAX</h2>
+	<section class="text-two">
+		<h2>BONZO</h2>
+		<p>Våran energiknippe som alltid är på strålande humör och fick han välja så skulle vi busa hela tiden!<br>
+		Älskar att springa runt och leka med dom andra hundarna.</p>
+	</section>
+
+	<section class="image-three">
+		<img src="../img/allDogs/ida.jpg" alt="Bild på Ida" class="main-image-three"></img>
+	</section>
+
+	<section class="text-three">
+		<h2>IDA</h2>
 		<p>Våran energiknippe som alltid är på strålande humör och fick han välja så skulle vi busa hela tiden!<br>
 		Älskar att springa runt och leka med dom andra hundarna.</p>
 	</section>
 
 	<footer class="footer">
-		<section class="main-footer">
-			GLADA TASSAR 
-            <br><br>
-            contact@gladatassarekero.com 
+		<section class="contact-footer">
+			<h3>KONTAKT</h3>
+			<b>Hunddagiset Glada Tassar</b>
+            <br>
+            Stockholmvägen 48B,
+			<br>
+			198 32, Stockholm
+			<br>
+            contact@gladatassar.com
             <br>
             08-4593032
             <br>
-            Stockholmvägen 48B, 198 32, Stockholm
 		</section>
-		<section class="second-footer">
+		<section class="navigate-footer">
+			<h3>NAVIGERA</h3>
+			<a href="../home/home.html">Hem</a><br>
+			<a href="../service/service.html">Priser</a><br>
+			<a href="../contact/contact.html">Kontakt</a><br>
+			<a href="dogs.html">Våra Hundar</a><br>
+		</section>
+		<section class="times-footer">
+			<h3>ÖPPETIDER</h3>
+			Hunddagiset är öppet måndag till fredag från kl.06.30 till 18.00.
+			<br>
+			Afton och röda dagar är det stängt.
+			<br>
+			Övrig tid, enligt överenskommelse.
+		</section>
+		<!-- <section class="copyright-footer">
 			Copyright 2021 &copy; Glada Tassar
-		</section>
+		</section> -->
 	</footer>
 </div>
 
