--- a/service/service.html
+++ b/service/service.html
@@ -11,18 +11,19 @@
 
 <div class="container">
 	<div class="logo">
-		<img src="../img/dogs.png" class="logo-image"></img>
+		<img src="../img/logo/dog-logo.png" alt="Dog logo" class="logo-image"></img>
+		<h1 class="logo-header">Hunddagiset<br>Glada Tassar</h1>
 	</div>
-	
+
 	<nav class="navbar">
 		<a href="../home/home.html">Hem</a>
 		<a href="service.html">Priser</a>
 		<a href="../contact/contact.html">Kontakt</a>
 		<a href="../dogs/dogs.html">Våra Hundar</a>
-		<span class="contactInfo">contact@gladatassar.com - 08-4593032</span>
+		<span class="contact-info">contact@gladatassar.com - 08-4593032</span>
 	</nav>
 
-	<section class="rollingImages">
+	<section class="rolling-images">
 		<img src="../img/max.jpg" class="max"></img>
 	</section>
 
@@ -30,7 +31,7 @@
 		<h1>PRISER</h1>
 	</section>
 
-	<section class="textOne">
+	<section class="text-one">
 		<ul>
 			<li>Om ni har flera hundar rabatteras priserna med 50% för de resterande hundarna.</li>
 			<li>Om ni vill ha upphämtning/avlämning kostar det 500kr/mån extra.</li>
@@ -51,8 +52,8 @@
 					<td>-</td>
 				</tr>
 				<tr>
-					<td>3200kr/mån</td>
 					<td>2000-2500kr/mån</td>
+					<td>3200kr/mån</td>
 					<td>400kr/dag</td>
 				</tr>
 				<tr>
@@ -80,18 +81,37 @@
 	</section>
 
 	<footer class="footer">
-		<section class="main-footer">
-			GLADA TASSAR 
-            <br><br>
-            contact@gladatassar.com 
+		<section class="contact-footer">
+			<h3>KONTAKT</h3>
+			<b>Hunddagiset Glada Tassar</b>
+            <br>
+            Stockholmvägen 48B,
+			<br>
+			198 32, Stockholm
+			<br>
+            contact@gladatassar.com
             <br>
             08-4593032
             <br>
-            Stockholmvägen 48B, 198 32, Stockholm
 		</section>
-		<section class="second-footer">
+		<section class="navigate-footer">
+			<h3>NAVIGERA</h3>
+			<a href="../home/home.html">Hem</a><br>
+			<a href="service.html">Priser</a><br>
+			<a href="../contact/contact.html">Kontakt</a><br>
+			<a href="../dogs/dogs.html">Våra Hundar</a><br>
+		</section>
+		<section class="times-footer">
+			<h3>ÖPPETIDER</h3>
+			Hunddagiset är öppet måndag till fredag från kl.06.30 till 18.00.
+			<br>
+			Afton och röda dagar är det stängt.
+			<br>
+			Övrig tid, enligt överenskommelse.
+		</section>
+		<!-- <section class="copyright-footer">
 			Copyright 2021 &copy; Glada Tassar
-		</section>
+		</section> -->
 	</footer>
 </div>
 
