--- a/contact/contact.html
+++ b/contact/contact.html
@@ -11,18 +11,19 @@
 
 <div class="container">
 	<div class="logo">
-		<img src="../img/dogs.png" class="logo-image"></img>
+		<img src="../img/logo/dog-logo.png" alt="Dog logo" class="logo-image"></img>
+		<h1 class="logo-header">Hunddagiset<br>Glada Tassar</h1>
 	</div>
-	
+
 	<nav class="navbar">
 		<a href="../home/home.html">Hem</a>
 		<a href="../service/service.html">Priser</a>
 		<a href="contact.html">Kontakt</a>
 		<a href="../dogs/dogs.html">Våra Hundar</a>
-		<span class="contactInfo">contact@gladatassar.com - 08-4593032</span>
+		<span class="contact-info">contact@gladatassar.com - 08-4593032</span>
 	</nav>
 
-	<section class="rollingImages">
+	<section class="rolling-images">
 		<img src="img/max.jpg" class="max"></img>
 	</section>
 
@@ -30,32 +31,77 @@
 		<h1>KONTAKTA OSS!</h1>
 	</section>
 
-	<section class="textOne">
-		För frågor, önskemål och dagisplats, fyll i formuläret nedan.
+	<section class="text-one">
+		<p>För frågor, önskemål och dagisplats. Fyll i formuläret nedan, så återkommer vi till dig.<p>
 	</section>
-	<form id="contact">
-		<label for="name">Namn:</label><br>
-		<input type="text" id="name" name="name"><br>
-		<label for="email">E-post:</label><br>
-		<input type="text" id="email" name="email"><br>
-		<label for="question">Fråga/Önskemål:</label><br>
-		<textarea id="question" name="question"></textarea><br><br>
-		<input type="submit" value="Submit">
+	<form id="contact-form">
+		<div class="details">
+			<div class="input">
+				<span class="name">Förnamn</span>
+				<input type="text" id="firstname" name="firstname" required>
+			</div>
+
+			<div class="input">
+				<span class="name">Efternamn:</span>
+				<label for="lastname"></label>
+				<input type="text" id="lastname" name="lastname" required>
+			</div>
+
+			<div class="input">
+				<span class="name">Epost:</span>
+				<label for="email"></label>
+				<input type="text" id="email" name="email" required>
+			</div>
+
+			<div class="input">
+				<span class="name">Mobilnummer:</span>
+				<label for="phonenumber"></label>
+				<input type="text" id="phonenumber" name="phonenumber" required>
+			</div>
+
+			<div class="input">
+				<span class="name">Fråga/Önskemål:</span>
+				<label for="question"></label>
+				<textarea id="question" name="question" required></textarea>
+			</div>
+		</div>
+		<div class="button">
+			<input type="submit" value="Submit">
+		</div>
 	</form>
 
 	<footer class="footer">
-		<section class="main-footer">
-			GLADA TASSAR 
-            <br><br>
-            contact@gladatassarekero.com 
+		<section class="contact-footer">
+			<h3>KONTAKT</h3>
+			<b>Hunddagiset Glada Tassar</b>
+            <br>
+            Stockholmvägen 48B,
+			<br>
+			198 32, Stockholm
+			<br>
+            contact@gladatassar.com
             <br>
             08-4593032
             <br>
-            Stockholmvägen 48B, 198 32, Stockholm
 		</section>
-		<section class="second-footer">
+		<section class="navigate-footer">
+			<h3>NAVIGERA</h3>
+			<a href="../home/home.html">Hem</a><br>
+			<a href="../service/service.html">Priser</a><br>
+			<a href="contact.html">Kontakt</a><br>
+			<a href="../dogs/dogs.html">Våra Hundar</a><br>
+		</section>
+		<section class="times-footer">
+			<h3>ÖPPETIDER</h3>
+			Hunddagiset är öppet måndag till fredag från kl.06.30 till 18.00.
+			<br>
+			Afton och röda dagar är det stängt.
+			<br>
+			Övrig tid, enligt överenskommelse.
+		</section>
+		<!-- <section class="copyright-footer">
 			Copyright 2021 &copy; Glada Tassar
-		</section>
+		</section> -->
 	</footer>
 </div>
 
