added cycle images effect with js

--- a/contact/contact.html
+++ b/contact/contact.html
@@ -16,15 +16,25 @@
 	</div>
 
 	<nav class="navbar">
-		<a href="../home/home.html">Hem</a>
+		<a href="../index.html">Hem</a>
 		<a href="../service/service.html">Priser</a>
 		<a href="contact.html">Kontakt</a>
 		<a href="../dogs/dogs.html">Våra Hundar</a>
 		<span class="contact-info">contact@gladatassar.com - 08-4593032</span>
 	</nav>
 
-	<section class="rolling-images">
-		<img src="img/max.jpg" class="max"></img>
+	<section class="cycle-images-container">
+		<div class="cycle-images fade">
+			<img src="../img/dogs/max.jpg" class="dog-cycle"></img>
+		</div>
+
+		<div class="cycle-images fade">
+			<img src="../img/dogs/maxOne.jpg" class="dog-cycle"></img>
+		</div>
+
+		<div class="cycle-images fade">
+			<img src="../img/dogs/maxTwo.jpg" class="dog-cycle"></img>
+		</div>
 	</section>
 
 	<section class="header">
@@ -32,7 +42,7 @@
 	</section>
 
 	<section class="text-one">
-		<p>För frågor, önskemål och dagisplats. Fyll i formuläret nedan, så återkommer vi till dig.<p>
+		<p>För frågor, önskemål och dagisplats. Fyll i formuläret nedan, så återkommer vi till dig snarast.<p>
 	</section>
 	<form id="contact-form">
 		<div class="details">
@@ -86,7 +96,7 @@
 		</section>
 		<section class="navigate-footer">
 			<h3>NAVIGERA</h3>
-			<a href="../home/home.html">Hem</a><br>
+			<a href="../index.html">Hem</a><br>
 			<a href="../service/service.html">Priser</a><br>
 			<a href="contact.html">Kontakt</a><br>
 			<a href="../dogs/dogs.html">Våra Hundar</a><br>
