--- a/dogs/dogs.html
+++ b/dogs/dogs.html
@@ -16,15 +16,25 @@
 	</div>
 
 	<nav class="navbar">
-		<a href="../home/home.html">Hem</a>
+		<a href="../index.html">Hem</a>
 		<a href="../service/service.html">Priser</a>
 		<a href="../contact/contact.html">Kontakt</a>
 		<a href="dogs.html">Våra Hundar</a>
 		<span class="contact-info">contact@gladatassar.com - 08-4593032</span>
 	</nav>
 
-	<section class="rolling-images">
-		<img src="../img/dogs/max.jpg" class="max"></img>
+	<section class="cycle-images-container">
+		<div class="cycle-images fade">
+			<img src="../img/dogs/max.jpg" class="dog-cycle"></img>
+		</div>
+
+		<div class="cycle-images fade">
+			<img src="../img/dogs/maxOne.jpg" class="dog-cycle"></img>
+		</div>
+
+		<div class="cycle-images fade">
+			<img src="../img/dogs/maxTwo.jpg" class="dog-cycle"></img>
+		</div>
 	</section>
 
 	<section class="header">
@@ -77,7 +87,7 @@
 		</section>
 		<section class="navigate-footer">
 			<h3>NAVIGERA</h3>
-			<a href="../home/home.html">Hem</a><br>
+			<a href="../index.html">Hem</a><br>
 			<a href="../service/service.html">Priser</a><br>
 			<a href="../contact/contact.html">Kontakt</a><br>
 			<a href="dogs.html">Våra Hundar</a><br>
@@ -90,9 +100,6 @@
 			<br>
 			Övrig tid, enligt överenskommelse.
 		</section>
-		<!-- <section class="copyright-footer">
-			Copyright 2021 &copy; Glada Tassar
-		</section> -->
 	</footer>
 </div>
 
