--- a/index.html
+++ b/index.html
@@ -1,73 +1,113 @@
-<!-- <html lang="en">
+<html lang="en">
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/index.css">
 </head>
 <body>
 
 <div class="container">
 	<div class="logo">
-		<img src="img/dogs.png" class="logoImage"></img>
+		<img src="img/logo/dog-logo.png" alt="Dog logo" class="logo-image"></img>
+		<h1 class="logo-header">Hunddagiset<br>Glada Tassar</h1>
 	</div>
-	
+
 	<nav class="navbar">
 		<a href="index.html">Hem</a>
 		<a href="service/service.html">Priser</a>
 		<a href="contact/contact.html">Kontakt</a>
 		<a href="dogs/dogs.html">Våra Hundar</a>
-		<span class="contactInfo">contact@gladatassarekero.com 08-4593032</span>
+		<span class="contact-info">contact@gladatassar.com 08-4593032</span>
 	</nav>
 
-	<section class="rollingImages">
-		<img src="img/max.jpg" class="max"></img>
+	<section class="cycle-images-container">
+		<div class="cycle-images fade">
+			<img src="img/dogs/max.jpg" class="dog-cycle"></img>
+		</div>
+
+		<div class="cycle-images fade">
+			<img src="img/dogs/maxOne.jpg" class="dog-cycle"></img>
+		</div>
+
+		<div class="cycle-images fade">
+			<img src="img/dogs/maxTwo.jpg" class="dog-cycle"></img>
+		</div>
 	</section>
 
 	<section class="header">
 		<h1>VÄLKOMMEN!</h1>
 	</section>
 
-	<section class="textOne">
+	<section class="text-one">
 		<h2>Hunddagis</h2>
-		<p>Här i Glada Tassar tar jag hand om din hund på bästa möjliga sätt. Anläggningen har standard efter gällande lag och bestämmelser.
-			- En grusad rastgård 50 kvm i anslutning till hundstallet.
-			- En gräs rastgård på 400 kvm.
+		<p>
+			Här på Glada Tassar tar vi hand om din hund på bästa möjliga sätt. Anläggningen har standard efter gällande lag och bestämmelser.
+		</p>
+			<ul>
+				<li>En grusad rastgård 45 kvm i anslutning till hunddagiset.</li>
+				<li>En gräs rastgård på 100 kvm.</li>
+				<li>Varje rum är minst 15 kvm.</li>
+			</ul>
+		<p>
+			Vi går aldrig med mer än 3 hundar i varje promenad grupp. Alla rum i hunddagiset har soffor och leksaker.
+			Leksakerna byts ut regelbundet.
+			Hundarna har möjlighet att vara ute på rastgården när vi inte är på promenad, oftast är dom ute tillsammans med dem hundarna som de delar rum med.
 		</p>
 	</section>
 
-	<section class="image">
-		<img src="img/dogs/max.jpg" class="logoImage"></img>
+	<section class="image-one">
+		<img src="img/dogs/max.jpg" class="main-image-one"></img>
 	</section>
 
-	<section class="imageTwo">
-		<img src="img/dogs/maxOne.jpg" class="logoImage"></img>
-		<img src="img/dogs/maxTwo.jpg" class="logoImage"></img>
+	<section class="image-two">
+		<img src="img/dogs/maxOne.jpg" class="main-image-two"></img>
 	</section>
 
-	<section class="textTwo">
+	<section class="text-two">
 		<h2>Upphämtning och lämning</h2>
-		<p>Vi erbjudar att både hämta och lämna din hund. Detta sker mellan 6:00 - 8:00 på morgonen för upphämtning och mellan 16:00 - 18:00 för lämning. 
+		<p>Vi erbjudar att både hämta och lämna din hund. Detta sker mellan 6:00 - 8:00 på morgonen för upphämtning och mellan 16:00 - 18:00 för lämning.
 			<br>Detta görs dock endast om du bor inom en mils radie från hunddagiset.
 		</p>
 	</section>
 
 	<footer class="footer">
-		<section class="main-footer">
-			GLADA TASSAR 
-            <br><br>
-            contact@gladatassarekero.com 
+		<section class="contact-footer">
+			<h3>KONTAKT</h3>
+			<b>Hunddagiset Glada Tassar</b>
+            <br>
+            Stockholmvägen 48B,
+			<br>
+			198 32, Stockholm
+			<br>
+            contact@gladatassar.com
             <br>
             08-4593032
             <br>
-            Stockholmvägen 48B, 198 32, Stockholm
 		</section>
-		<section class="second-footer">
+		<section class="navigate-footer">
+			<h3>NAVIGERA</h3>
+			<a href="index.html">Hem</a><br>
+			<a href="service/service.html">Priser</a><br>
+			<a href="contact/contact.html">Kontakt</a><br>
+			<a href="dogs/dogs.html">Våra Hundar</a><br>
+		</section>
+		<section class="times-footer">
+			<h3>ÖPPETIDER</h3>
+			Hunddagiset är öppet måndag till fredag från kl.06.30 till 18.00.
+			<br>
+			Afton och röda dagar är det stängt.
+			<br>
+			Övrig tid, enligt överenskommelse.
+		</section>
+		<!-- <section class="copyright-footer">
 			Copyright 2021 &copy; Glada Tassar
-		</section>
+		</section> -->
 	</footer>
 </div>
 
+<script src="js/main.js"></script>
 </body>
-</html> -->
+</html>
