added zooming image effects on three images

--- a/contact/contact.html
+++ b/contact/contact.html
@@ -51,31 +51,31 @@
 				<div class="details">
 					<div class="input">
 						<span class="firstname">Förnamn</span>
-						<input type="text" id="firstname" name="firstname" >
+						<input type="text" id="firstname" name="firstname" required>
 					</div>
 
 					<div class="input">
 						<span class="lastname">Efternamn:</span>
 						<label for="lastname"></label>
-						<input type="text" id="lastname" name="lastname" >
+						<input type="text" id="lastname" name="lastname" required>
 					</div>
 
 					<div class="input">
 						<span class="email">Epost:</span>
 						<label for="email"></label>
-						<input type="text" id="email" name="email" >
+						<input type="text" id="email" name="email" required>
 					</div>
 
 					<div class="input">
 						<span class="mobile">Mobilnummer:</span>
 						<label for="phonenumber"></label>
-						<input type="text" id="phonenumber" name="phonenumber" >
+						<input type="text" id="phonenumber" name="phonenumber" required>
 					</div>
 
 					<div class="input">
 						<span class="question">Fråga/Önskemål:</span>
 						<label for="question"></label>
-						<textarea id="question" name="question" ></textarea>
+						<textarea id="question" name="question" required></textarea>
 					</div>
 				</div>
 				<div class="button">
