--- a/dogs/dogs.html
+++ b/dogs/dogs.html
@@ -42,34 +42,48 @@
 				<h1>VÅRA HUNDAR!</h1>
 			</section>
 
+			<!-- div for zooming image when clicking on them -->
+			<div id="zoom-images" class="zoom">
+				<span class="closeButton">&times;</span>
+				<img class="zoom-content" id="images">
+				<div id="caption"></div>
+			</div>
+
 			<section class="text-one">
 				<h2>MAX</h2>
+				<h3>Blandras <br>(Siberian Husky, Samoyed, Norrbottenspets, Finsk Lapphund)</h3>
 				<p>Våran energiknippe som alltid är på strålande humör och fick han välja så skulle vi busa hela tiden!<br>
-				Älskar att springa runt och leka med dom andra hundarna.</p>
+				Älskar att springa runt och leka med dom andra hundarna.<br>
+				Dock är han lika förtjust i människor och spenderar gärna lika mycket tid med oss.</p>
 			</section>
 
 			<section class="image-one">
-				<img src="../img/allDogs/max.jpg" alt="Bild på Max" class="main-image-one"></img>
+				<img id="dogImage" src="https://previews.dropbox.com/p/thumb/ABNXEBQPp6i2mDruiZg-CnocWE7MqKPxcGYJOTa9X9xrDoVpBNu6pPcmf1zV1NRYeNguyGQxDQH6HKq9DVlMzJGZVMwzAyCihenFA_spzXo2KDDBr41iPRV3OqONgl_loa1X06vU20X0KBikdMYLO7FQrvi_0VWredf5dW54jgGmxsOld3uPlnivJYgyc5uX_3_13sTHODeeLnKdWPVoOHWRWnf_9SzWZt9D0w88srDVeBUsp-JiSrAXCAIWqz4tCpY91Ntc-mCQEduUWP7h1Dp5ji7au7VlV4IRPQ_mOCapdm6IrGH6G_dpR6AgCff6Ygb2CDIWlH_PpvydnPdX82NKoIqsqRwCSxr5yHWms-atk2sJ5UVXGi_CRk9Ao2ayRnKwtwr2u-5QZU7vSbXcPDXxZCPtklXIYXrL_j45KoPuEA/p.jpeg?fv_content=true&size_mode=5" alt="Max utomhus och njuter av sommaren." class="main-image-one"></img>
 			</section>
 
 			<section class="image-two">
-				<img src="../img/allDogs/bonzo.jpg" alt="Bild på Bonzo" class="main-image-two"></img>
+				<img id="dogImageTwo" src="https://previews.dropbox.com/p/thumb/ABNNSTgUHOQrRGxpCQQN6COfA0dsxPzTFsi4O1SXjDCdVayLCwZXjFn-cFLdriK8K3A_gZuNM-XMaakzG1O49bCOimOYKxzKnIVifnM9RzKyq7kpYsUMez9D7v3odkkv4TIpcRhpBHMBr5f_AFFCg95cbfkd7WuZyEYoWhH4E5fDe-j2USLuM24Jfo0eG6rDb41cuLma9IUCCgDmY8Nfq4dK7CKV8sSWq248nr6acbt9P3Jgl2RjUHGF6Ho9jtsft05xfZ5ircZMA7lmaSk9iQr7Rtk7vCdqjAqvtcf3ajSx0mUHTi2qAYj7I61BUjIJmC_dHzYimjnP2EM-W7Ux9FeUg9xnTqIlFE095PZVqJ7Yrw/p.jpeg?fv_content=true&size_mode=5"
+				alt="Busig Bonzo som väntar på att någon ska kasta pinnen." class="main-image-two"></img>
 			</section>
 
 			<section class="text-two">
 				<h2>BONZO</h2>
-				<p>Våran energiknippe som alltid är på strålande humör och fick han välja så skulle vi busa hela tiden!<br>
-				Älskar att springa runt och leka med dom andra hundarna.</p>
+				<h3>Shetland Sheepdog</h3>
+				<p>Våran glada och spralliga kille som gärna spenderar all tid han kan med dom andra hundarna.<br>
+				Många kan tycka att han är lite för mycket, men han vill endast väl.<br>
+				Mycket energi, och älskar mat!</p>
 			</section>
 
 			<section class="image-three">
-				<img src="../img/allDogs/ida.jpg" alt="Bild på Ida" class="main-image-three"></img>
+				<img id="dogImageThree" src="https://previews.dropbox.com/p/thumb/ABPGUeNFTWJlgD6QC6fmpvcH182LgQzgBy-0gDMfgRsO5CclNKPLS8eCg4WT-5sIqwESdmr0jlBigS8fcLXssvrZmB_UHYjWyYdbvuPlFzW1ZBkgBK1jqkrJEpSkr3OGgrutnZObQp31iOYYBZ8DCqQgC62a7hFEz01ReAem_4iEsm-CNT_nMlqoeH-vpMKkh9Ue1ZwxPtLNg6tgs61U_o8lmc8ZKXWuAma-KIC1swp_jJNjogXsSTiVaM8p3PDxb1Pv4KgEtX-Eugaevw44Pg0EZtbvnjVI-XSRAlodmYZIR-SBYiRL8wdX3J8PgPkn1KJvsHUbq_5qjr0rtJ2Ph34CC5du8zPn4S8ZdW_PuLAVrg/p.jpeg?size=2048x1536&size_mode=3"
+				alt="Ida som hoppas att vintern snart ska komma." class="main-image-three"></img>
 			</section>
 
 			<section class="text-three">
 				<h2>IDA</h2>
-				<p>Våran energiknippe som alltid är på strålande humör och fick han välja så skulle vi busa hela tiden!<br>
-				Älskar att springa runt och leka med dom andra hundarna.</p>
+				<h3>Norrbottenspets</h3>
+				<p>Våran gammel tant som blir som en valp på vintrarna men väldigt långsam när värmen intar.<br>
+				Väldigt självständig, och bryr sig inte så mycket om andra hundar. Dock säger hon inte nej för lite gosande!</p>
 			</section>
 
 			<footer class="footer">
@@ -106,5 +120,6 @@
 		</div>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 		<script src="../js/main.js"></script>
+		<script src="dogs.js"></script>
 	</body>
 </html>
