changed some text and colors

--- a/dogs/dogs.html
+++ b/dogs/dogs.html
@@ -4,6 +4,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Glada Tassar | Våra Hundar</title>
+		<link rel="shortcut icon" type="image/jpg" href="../img/favicon.png"/>
 		<link rel="stylesheet" type="text/css" href="../css/style.css">
 		<link rel="stylesheet" type="text/css" href="dogs.css">
 	</head>
@@ -51,7 +52,7 @@
 
 			<section class="text-one">
 				<h2>MAX</h2>
-				<h3>Blandras <br>(Siberian Husky, Samoyed, Norrbottenspets, Finsk Lapphund)</h3>
+				<h3 class="breed-info">Blandras <br>(Siberian Husky, Samoyed, Norrbottenspets, Finsk Lapphund)</h3>
 				<p>Våran energiknippe som alltid är på strålande humör och fick han välja så skulle vi busa hela tiden!<br>
 				Älskar att springa runt och leka med dom andra hundarna.<br>
 				Dock är han lika förtjust i människor och spenderar gärna lika mycket tid med oss.</p>
@@ -68,7 +69,7 @@
 
 			<section class="text-two">
 				<h2>BONZO</h2>
-				<h3>Shetland Sheepdog</h3>
+				<h3 class="breed-info">Shetland Sheepdog</h3>
 				<p>Våran glada och spralliga kille som gärna spenderar all tid han kan med dom andra hundarna.<br>
 				Många kan tycka att han är lite för mycket, men han vill endast väl.<br>
 				Mycket energi, och älskar mat!</p>
@@ -81,7 +82,7 @@
 
 			<section class="text-three">
 				<h2>IDA</h2>
-				<h3>Norrbottenspets</h3>
+				<h3 class="breed-info">Norrbottenspets</h3>
 				<p>Våran gammel tant som blir som en valp på vintrarna men väldigt långsam när värmen intar.<br>
 				Väldigt självständig, och bryr sig inte så mycket om andra hundar. Dock säger hon inte nej för lite gosande!</p>
 			</section>
