added and fixed position on cycle images

--- a/contact/contact.html
+++ b/contact/contact.html
@@ -27,15 +27,23 @@
 
 			<section class="cycle-images-container">
 				<div class="cycle-images fade">
-					<img src="../img/dogs/max.jpg" class="dog-cycle"></img>
+					<img src="../img/cycleDogs/maxFive.jpg"
+					class="dog-cycle" style="object-fit: cover; object-position: 30% 30%;"></img>
 				</div>
 
 				<div class="cycle-images fade">
-					<img src="../img/dogs/maxOne.jpg" class="dog-cycle"></img>
+					<img src="../img/cycleDogs/idaThree.jpg"
+					class="dog-cycle" style="object-fit: cover; object-position: 50% 50%;"></img>
 				</div>
 
 				<div class="cycle-images fade">
-					<img src="../img/dogs/maxTwo.jpg" class="dog-cycle"></img>
+					<img src="../img/cycleDogs/bonzoIda.JPG"
+					class="dog-cycle" style="object-fit: cover; object-position: 25% 25%;"></img>
+				</div>
+
+				<div class="cycle-images fade">
+					<img src="../img/cycleDogs/bonzoTwo.jpg"
+					class="dog-cycle" style="object-fit: cover; object-position: 50% 50%;"></img>
 				</div>
 			</section>
 
