--- a/gallery/gallery.html
+++ b/gallery/gallery.html
@@ -27,15 +27,23 @@
 
 			<section class="cycle-images-container">
 				<div class="cycle-images fade">
-					<img src="../img/dogs/max.jpg" class="dog-cycle"></img>
+					<img src="../img/cycleDogs/maxFive.jpg"
+					class="dog-cycle" style="object-fit: cover; object-position: 30% 30%;"></img>
 				</div>
 
 				<div class="cycle-images fade">
-					<img src="../img/dogs/maxOne.jpg" class="dog-cycle"></img>
+					<img src="../img/cycleDogs/idaThree.jpg"
+					class="dog-cycle" style="object-fit: cover; object-position: 50% 50%;"></img>
 				</div>
 
 				<div class="cycle-images fade">
-					<img src="../img/dogs/maxTwo.jpg" class="dog-cycle"></img>
+					<img src="../img/cycleDogs/bonzoIda.JPG"
+					class="dog-cycle" style="object-fit: cover; object-position: 25% 25%;"></img>
+				</div>
+
+				<div class="cycle-images fade">
+					<img src="../img/cycleDogs/bonzoTwo.jpg"
+					class="dog-cycle" style="object-fit: cover; object-position: 50% 50%;"></img>
 				</div>
 			</section>
 
@@ -87,8 +95,8 @@
 					<a href="../index.html">Hem</a><br>
 					<a href="../service/service.html">Priser</a><br>
 					<a href="../contact/contact.html">Kontakt</a><br>
-                    <a href="gallery.html">Galleri</a>
 					<a href="dogs.html">Våra Hundar</a><br>
+                    <a href="gallery.html">Galleri</a>
 				</section>
 				<section class="times-footer">
 					<h3>ÖPPETIDER</h3>
