--- a/service/service.html
+++ b/service/service.html
@@ -4,6 +4,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Glada Tassar | Tjänster</title>
+		<link rel="shortcut icon" type="image/jpg" href="../img/favicon.png"/>
 		<link rel="stylesheet" type="text/css" href="../css/style.css">
 		<link rel="stylesheet" type="text/css" href="service.css">
 	</head>
@@ -25,15 +26,23 @@
 
 			<section class="cycle-images-container">
 				<div class="cycle-images fade">
-					<img src="../img/dogs/max.jpg" class="dog-cycle"></img>
+					<img src="../img/cycleDogs/maxFive.jpg"
+					class="dog-cycle" style="object-fit: cover; object-position: 30% 30%;"></img>
 				</div>
 
 				<div class="cycle-images fade">
-					<img src="../img/dogs/maxOne.jpg" class="dog-cycle"></img>
+					<img src="../img/cycleDogs/idaThree.jpg"
+					class="dog-cycle" style="object-fit: cover; object-position: 50% 50%;"></img>
 				</div>
 
 				<div class="cycle-images fade">
-					<img src="../img/dogs/maxTwo.jpg" class="dog-cycle"></img>
+					<img src="../img/cycleDogs/bonzoIda.JPG"
+					class="dog-cycle" style="object-fit: cover; object-position: 25% 25%;"></img>
+				</div>
+
+				<div class="cycle-images fade">
+					<img src="../img/cycleDogs/bonzoTwo.jpg"
+					class="dog-cycle" style="object-fit: cover; object-position: 50% 50%;"></img>
 				</div>
 			</section>
 
@@ -122,7 +131,6 @@
 				</section>
 			</footer>
 		</div>
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 		<script src="../js/main.js"></script>
 	</body>
 </html>
