added all images to the gallery

--- a/gallery/gallery.html
+++ b/gallery/gallery.html
@@ -4,7 +4,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Glada Tassar | Våra Hundar</title>
-		<link rel="shortcut icon" type="image/jpg" href="../img/favicon.png"/>
+		<link rel="shortcut icon" type="image/jpg" href="../img/logo/favicon.png"/>
 		<link rel="stylesheet" type="text/css" href="../css/style.css">
 		<link rel="stylesheet" type="text/css" href="gallery.css">
 	</head>
@@ -55,16 +55,31 @@
 
 				<div class="image-row">
 				  	<div class="image-col">
-						<img src="../img/allDogs/max.jpg" alt="Nature" class="gallery-image" onclick="galleryExpandImage(this);">
+						<img src="../img/galleryDogs/maxOne.jpg" alt="En glad Max!" class="gallery-image" onclick="galleryExpandImage(this);">
 					</div>
 					<div class="image-col">
-						<img src="../img/allDogs/max.jpg" alt="Snow" class="gallery-image" onclick="galleryExpandImage(this);">
+						<img src="../img/galleryDogs/bonzoOne.jpg" alt="Bonzo njuter av solen." class="gallery-image" onclick="galleryExpandImage(this);">
 					</div>
 					<div class="image-col">
-						<img src="../img/allDogs/max.jpg" alt="Mountains" class="gallery-image" onclick="galleryExpandImage(this);">
+						<img src="../img/galleryDogs/idaOne.jpg" alt="Ida på promenad i skogen." class="gallery-image" onclick="galleryExpandImage(this);">
 					</div>
 					<div class="image-col">
-						<img src="../img/allDogs/max.jpg" alt="Lights" class="gallery-image" onclick="galleryExpandImage(this);">
+						<img src="../img/galleryDogs/maxTwo.jpg" alt="Max busar i snön." class="gallery-image" onclick="galleryExpandImage(this);">
+					</div>
+					<div class="image-col">
+						<img src="../img/galleryDogs/bonzoTwo.jpg" alt="Bonzo busar i snön." class="gallery-image" onclick="galleryExpandImage(this);">
+					</div>
+					<div class="image-col">
+						<img src="../img/galleryDogs/idaTwo.jpg" alt="Ida försöker mörda sin favorit gris." class="gallery-image" onclick="galleryExpandImage(this);">
+					</div>
+					<div class="image-col">
+						<img src="../img/galleryDogs/maxThree.jpg" alt="Max väntar på lek!" class="gallery-image" onclick="galleryExpandImage(this);">
+					</div>
+					<div class="image-col">
+						<img src="../img/galleryDogs/bonzoThree.jpg" alt="Bonzo återhämtar sig efter lek." class="gallery-image" onclick="galleryExpandImage(this);">
+					</div>
+					<div class="image-col">
+						<img src="../img/galleryDogs/idaThree.jpg" alt="Ida njuter av solen." class="gallery-image" onclick="galleryExpandImage(this);">
 					</div>
 			 	</div>
 
